--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="h1">35sp</dimen>
+    <dimen name="icon">120dp</dimen>
+    <dimen name="image">240dp</dimen>
 </resources>
